--- a/front/src/App.module.css
+++ b/front/src/App.module.css
@@ -2,10 +2,10 @@
     height:100%;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-areas:
-            "n r"
-            "f f";
-    grid-template-rows: 5fr 1fr;
+    grid-template-areas:"h h"
+                        "n r"
+                        "f f";
+    grid-template-rows: 1fr 10fr 1fr;
     border: 1px solid black;
 }
 footer{
@@ -14,5 +14,10 @@ footer{
 }
 .routes{
     grid-area:r;
+    border: 1px solid black;
+}
+
+.header{
+    grid-area:h;
     border: 1px solid black;
 }
