--- a/front/src/CommonPages/AuthPage/AuthPage.module.css
+++ b/front/src/CommonPages/AuthPage/AuthPage.module.css
@@ -1,3 +1,26 @@
 .form{
+    border: 1px solid black;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    flex-direction: column;
+}
+.btn, .login, .password{
+    padding:2%;
+    border: 1px solid black;
+    width: 100%;
+    text-align: center;
+    vertical-align: middle;
+}
+.btn{
+
+}
+
+.login{
+
+}
+
+.password{
 
 }
